# pathfinding-visualizer

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Main.qml  Pathfinder.js  README.md  app.js  build.ninja  cmake_install.cmake  debug_log.txt  index.html  main.cpp  pathfinder_qmltyperegistrations.cpp  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-41d0f65d92300aba33bd.json  cache-v2-a930a35c1a971587e6b1.json  cache-v2-e8b3b72d2cd3c17b57e6.json  cmakeFiles-v1-f6bf64c37e011ebecc5d.json  codemodel-v2-4e0608a8b964fa76e227.json  (+33 more)
.cmake/api/v1/reply.prev/: cache-v2-964dd522e7323de1b4b6.json  cmakeFiles-v1-06f71b46e21daebf090b.json  cmakeFiles-v1-6777f21ac635c1920f1d.json  cmakeFiles-v1-e859ec4593814dc8f179.json  codemodel-v2-03e60ceb789cc3302d80.json  codemodel-v2-b50c7beff2a7af66278d.json  directory-.-Debug-6272d039cf570a1c3925.json  index-2026-04-08T11-09-52-0651.json  index-2026-04-08T11-22-48-0835.json  index-2026-04-08T12-08-37-0482.json  target-Pathfinder-Debug-1b1cc41475e74084c506.json  target-Pathfinder_autogen_timestamp_deps-Debug-5f576f61acac42417a42.json  target-Pathfinder_copy_qml-Debug-7c6c7e69ddd82443fbe3.json  target-Pathfinder_copy_res-Debug-6c2e542b4d43c8597bd9.json  target-Pathfinder_qmllint_json-Debug-f02d2bb93bd4cd114a5b.json  target-all_qmllint-Debug-097c84e6efd9820ec8b6.json  target-all_qmllint-Debug-856bb5e65e6929d95f5d.json  target-all_qmllint-Debug-cdbd2f15379eee77789e.json  target-all_qmllint_json-Debug-645f7bb046231a0697b1.json  target-all_qmllint_json-Debug-c6251483bb844c35478f.json  target-all_qmllint_json-Debug-e3636cc7031a03344754.json  target-all_qmllint_module-Debug-41731db923afb0166874.json  target-all_qmllint_module-Debug-cfa87f41b34c51829b77.json  target-all_qmltyperegistrations-Debug-0de78f425dd21891ef1a.json  target-all_qmltyperegistrations-Debug-cd37f4f2660ece148715.json  target-app-Debug-0878c2a4883b61748cce.json  target-app-Debug-6597c626952ee3bc439f.json  target-app-Debug-6cc0ea1551b403832f66.json  target-app_autogen_timestamp_deps-Debug-5c0d8d1831bcd84a7f32.json  target-app_autogen_timestamp_deps-Debug-69e33b8b72d26a77ea72.json  target-app_copy_qml-Debug-43573c37e6a27721d89f.json  target-app_copy_res-Debug-38383e2afdd8208d347a.json  target-app_copy_res-Debug-d0bca136aafe63fbe8c9.json  target-app_qmllint_module-Debug-e5ea400721926fe17f30.json  target-app_qmltyperegistration-Debug-767b34410a20ffca1abd.json  target-app_qmltyperegistration-Debug-d598080d302cfe59684d.json  target-generate_qmlls_build_ini_file-Debug-b382a40b51533b3d302f.json  target-module_app_aotstats_target-Debug-caea07e86d92ecd6a69e.json
.github/workflows/: build.yaml
.qt/: .qmlls.build.ini  Pathfinder_qml.cmake  Pathfinder_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake  app_qml.cmake  app_res.cmake
.qt/qml_imports/: Pathfinder_conf.cmake  Pathfinder_conf.rsp  app_conf.cmake  app_conf.rsp
.qt/rcc/: Pathfinder_raw_qml_0.qrc  Pathfinder_raw_res_0.qrc  app_raw_qml_0.qrc  app_raw_res_0.qrc  qmake_Pathfinding.qrc  qrc_Pathfinder_raw_qml_0.cpp  qrc_Pathfinder_raw_res_0.cpp  qrc_app_raw_qml_0.cpp  qrc_app_raw_res_0.cpp  qrc_qmake_Pathfinding.cpp
.qtc_clangd/: compile_commands.json
.rcc/qmlcache/: Pathfinder_Main_qml.cpp  Pathfinder_Main_qml.cpp.aotstats  Pathfinder_qml_loader_file_list.rsp  Pathfinder_qmlcache_loader.cpp  all_aotstats.aotstatslist  app_Main_qml.cpp  app_Main_qml.cpp.aotstats  app_qml_loader_file_list.rsp  app_qmlcache_loader.cpp  module_Pathfinder.aotstatslist  module_app.aotstatslist
.rcc/qmlcache/app_ui/: Main_qml.cpp
.rcc/qmllint/: Pathfinder.rsp  Pathfinder_json.rsp  Pathfinder_module.rsp  app.rsp  app_json.rsp  app_module.rsp
Pathfinder_autogen/: deps  moc_predefs.h
Pathfinder_autogen/T7P5CWKXPE/: moc_cursorhelper.cpp.d  moc_pathfinding.cpp  moc_pathfinding.cpp.d  moc_pathfinding.cpp.json
Pathfinder_autogen/ULN6AZYKRN/: moc_gridmodel.cpp  moc_gridmodel.cpp.d  moc_gridmodel.cpp.json
Pathfinding/: Main.qml  Pathfinder_qml_module_dir_map.qrc  app_qml_module_dir_map.qrc  qmldir
Pathfinding/ui/components/: PathGrid.qml  SpeedSlider.qml  StyledButton.qml  StyledText.qml  Toaster.qml
Pathfinding/ui/theme/: Theme.qml
app_autogen/: deps  moc_predefs.h
app_autogen/T7P5CWKXPE/: moc_cursorhelper.cpp  moc_cursorhelper.cpp.d  moc_pathfinding.cpp  moc_pathfinding.cpp.d  moc_pathfinding.cpp.json
app_autogen/ULN6AZYKRN/: moc_gridmodel.cpp  moc_gridmodel.cpp.d  moc_gridmodel.cpp.json
build-wasm/: cmake_install.cmake
build-wasm/.qt/: .qmlls.build.ini
build-wasm/.qt/qml_imports/: app_conf.cmake  app_conf.rsp
build-wasm/.qt/rcc/: app_raw_qml_0.qrc  app_raw_res_0.qrc  qrc_app_raw_qml_0.cpp  qrc_app_raw_res_0.cpp
build-wasm/.rcc/qmlcache/: app_qml_loader_file_list.rsp
build-wasm/app_autogen/: mocs_compilation.cpp
build-wasm/app_autogen/T7P5CWKXPE/: moc_cursorhelper.cpp.json  moc_pathfinding.cpp  moc_pathfinding.cpp.d
build-wasm/app_autogen/ULN6AZYKRN/: moc_gridmodel.cpp  moc_gridmodel.cpp.d
build-wasm/qmltypes/: app_foreign_types.txt
cpp/: algorithmType.h  gridmodel.cpp  gridmodel.h  pathfinding.cpp  pathfinding.h
cpp/algorithms/: algorithmType.h  astar.cpp  astar.h  bfs.cpp  bfs.h  dijkstra.cpp  dijkstra.h  ialgorithm.h  worker.cpp  worker.h
cpp/algorithms/tsp/: bruteforce.cpp  bruteforce.h  itspalgorithm.h
cpp/core/: cursorhelper.cpp  cursorhelper.h  pathfinding.cpp  pathfinding.h
cpp/model/: gridmodel.cpp  gridmodel.h  node.h
java/Test/: Edge.java  Graph.java  Node.java
meta_types/: Pathfinder_json_file_list.txt  Pathfinder_json_file_list.txt.timestamp  app_json_file_list.txt  app_json_file_list.txt.timestamp  qt6app_metatypes.json  qt6app_metatypes.json.gen  qt6pathfinder_metatypes.json
python/: main.py  model.py
python/ui/: __init__.py  controls.py  model.py  settings.py  ui.py
qmltypes/: Pathfinder_foreign_types.txt
ui/: Main.qml
ui/components/: AlgoSelector.qml  ControlPanel.qml  GridTile.qml  PathGrid.qml  SpeedSlider.qml  StatusBar.qml  StyledButton.qml  StyledIcon.qml  StyledText.qml  Toaster.qml  WeightButton.qml
ui/theme/: Theme.qml
(+979 files in other folders)
